# DIMA-morphological-networks

./: .gitignore  README.md  pyproject.toml
config/: base.yaml  exp3_4pixel_single.yaml  exp4_4pixel_two_layer.yaml  exp5_4pixel_receptive_field.yaml
docs/: morpho-net-architecture.md  morpho-net-requirements.md  notebook-guidelines.md
morpho-net/: .gitignore  README.md  pyproject.toml
morpho-net/config/: base.yaml
morpho-net/morpho_net/: evaluate.py  main.py
morpho-net/morpho_net/analysis/: __init__.py  curves.py  experiment_plots.py  pareto.py
morpho-net/morpho_net/data/: __init__.py  dataset.py
morpho-net/morpho_net/experiments/: run_experiment.py
morpho-net/morpho_net/initialization/: __init__.py  random_e_patches.py  uniform.py
morpho_net/: __init__.py
morpho_net/analysis/: experiment_plots.py  kernels.py  pareto.py  weight_evolution.py
morpho_net/data/: ground_truth.py
morpho_net/experiments/: __init__.py  run_experiment.py
morpho_net/initialization/: base.py  minimal_e_patches.py  registry.py
morpho_net/layers/: sup_erosions.py
morpho_net/models/: __init__.py  registry.py  two_layer_receptive_field.py  two_layer_sup_erosions.py
morpho_net/training/: callbacks.py  fit.py
morpho_net/utils/: config.py
notebooks/4-pixel/: exp_four_pixel_average.ipynb  exp_four_pixel_average.py
notebooks/cluster/: exp_four_pixel_average.py
notebooks/rank-pareto-update/: rank-pareto-update.py
notebooks/seim/: exp_antidilation_morpho_gradients.ipynb  exp_antidilation_morpho_gradients.py
scripts/: rerun_weight_snapshot_plots.py
(+26 files in other folders)
